@@ -1,5 +1,8 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
+changes relative to sbcl-1.3.4:
+  * enhancement: the platform's strtod() is exposed as SB-POSIX:STRTOD
+
 changes in sbcl-1.3.4 relative to sbcl-1.3.3:
   * enhancement: who-sets and who-references work on DEFGLOBAL. (lp#1552997)
   * enhancement: CONSTANTP understands backquote.
